--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,6 +95,34 @@ h2.main-judul::after{
   margin-bottom: 20px;
 }
 
+.hero .about-btn {
+  background-color: #890202;
+  color: #ffffff;
+  font-family: quicksand;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.hero .about-btn:hover {
+  background-color: #fffb03;
+  color: #000000;
+}
+
+
+
+.hero img {
+  transition: transform 0.2s;
+  margin-top: 10px;
+
+}
+
+.hero img:hover {
+  transform: scale(1.05);
+}
+
 /* Fitur/about */
 
 .about {
@@ -134,9 +162,8 @@ h2.main-judul::after{
   font-family: quicksand;
   font-weight: 600;
   margin-bottom: 5px;
-
-
 }
+
 /* contact us */
 .contact-us h2 {
   position: relative;
@@ -155,14 +182,14 @@ h2.main-judul::after{
   display: block;
   width: 50px;
   height: 3px;
-  background-color: red;
+  background-color: #890202;
   margin: auto;
   margin-top: 5px;
   animation: animate-line 1.5s infinite alternate;
 }
 
 .contact-us a{
-  color: #fb0808;
+  color: #890202;
   font-weight: 600;
 }
 
@@ -180,10 +207,50 @@ h2.main-judul::after{
 }
 
 
-/* footer */
+/* Testimonial  */
+.judul {
+  font-family:  Quicksand;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.judul::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 3px;
+  background-color: #890202;
+  margin: 8px auto 0;
+  border-radius: 2px;
+}
+
+
+
+.carousel {
+  max-width: 600px;
+  margin: auto;
+}
+
+.testimonial-img {
+  width: 80px; 
+  height: 80px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+}
+
+.carousel img {
+  object-fit: cover;
+  width: 100%;
+  height: 300px; /* Sesuaikan tinggi */
+}
+
 
 .visit-us {
-  background-color: #ffffff;
+  background-color: #fbf3f3;
   color: #000000;
   font-family:quicksand;
   text-align: center;
@@ -202,8 +269,8 @@ h2.main-judul::after{
   margin: 0;
   display: flex;
   justify-content: center;
-  gap: 40px; /* Lebih lebar */
-  margin-bottom: 50px; /* Jarak dari konten */
+  gap: 40px; 
+  margin-bottom: 50px; 
 }
 
 .footer-links li {
@@ -213,10 +280,10 @@ h2.main-judul::after{
 .footer-links a {
   text-decoration: none;
   color: black;
-  font-size: 22px; /* Font lebih besar */
+  font-size: 22px; 
   font-weight: bold;
   position: relative;
-  padding-bottom: 8px; /* Biar ada ruang buat garis */
+  padding-bottom: 8px; 
 }
 
 .footer-links a::after {
@@ -224,14 +291,14 @@ h2.main-judul::after{
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 0%;  /* Awalnya 0 */
-  height: 4px;  /* Garis lebih tebal */
+  width: 0%;  
+  height: 4px;  
   background-color: rgb(255, 0, 0);
-  transition: width 0.4s ease-in-out; /* Animasi lebih smooth */
+  transition: width 0.4s ease-in-out; 
 }
 
 .footer-links a:hover::after {
-  width: 100%;  /* Muncul penuh saat hover */
+  width: 100%;  
 }
 
 
